# angular_bazel_GRPC

./: .clang-format  .gitignore  BUILD.bazel  WORKSPACE  package.json  tsconfig.json
addition_service/: BUILD.bazel  addition_service.proto
addition_service/server/: BUILD.bazel  addition_server.go  main.go
api/: BUILD.bazel  defs.bzl
api/echo_service/: BUILD.bazel  echo_service.proto
backend/: BUILD.bazel  echo.go  main.go
gateway/: BUILD.bazel  gateway.go
grpc_gateway/: BUILD.bazel  index.html  main.go
grpc_gateway/gateway/: BUILD.bazel  doc.go  gateway.go  handlers.go  main.go  run.go
multiplication_service/: BUILD.bazel  multiplication_service.proto
multiplication_service/server/: BUILD.bazel  Main.java  MultiplicationServer.java  MultiplicationServiceImpl.java
src/: BUILD.bazel  app.component.html  app.component.ts  app.module.ts  tsconfig.json
tools/: bazel.rc
