package(default_visibility = ["//visibility:public"])

# ts_library and ng_module use the `//:tsconfig.json` target
# by default. This alias allows omitting explicit tsconfig
# attribute.
alias(
    name = "tsconfig.json",
    actual = "//src:tsconfig.json",
)

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
)

buildifier(
    name = "buildifier_check",
    mode = "check",
)

# gazelle:exclude node_modules
# gazelle:exclude dist
gazelle(name = "gazelle")
