load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_embed_data")

go_embed_data(
    name = "static",
    srcs = [
        "index.html",
        "//:node_modules/zone.js/dist/zone.min.js",
        "//addition_service:protoc_gen_swagger",
        "//multiplication_service:protoc_gen_swagger",
    ],
    flatten = True,
    package = "main",
)

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        ":static",
    ],
    importpath = "angular_bazel_GRPC/grpc_gateway",
    visibility = ["//visibility:private"],
    deps = [
        "//grpc_gateway/gateway:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_binary(
    name = "grpc_gateway",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
