package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    assets = [
        ":app.component.html",
    ],
    deps = [
        "//addition_service:ng_module",
        "@rxjs",
    ],
)

load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

ts_devserver(
    name = "devserver",
    entry_module = "angular_bazel_GRPC/src/main",
    scripts = [
        ":require.config.js",
        "//:angular_bundles",
    ],
    serving_path = "/bundle.min.js",
    deps = ["//src"],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "nodejs_binary")

rollup_bundle(
    name = "bundle",
    entry_point = "src/main",
    deps = ["//src"],
)

# Needed because the prodserver only loads static files that appear under this
# package.
genrule(
    name = "zonejs",
    srcs = ["//:node_modules/zone.js/dist/zone.min.js"],
    outs = ["zone.min.js"],
    cmd = "cp $< $@",
)
