load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary")

go_library(
    name = "go_default_library",
    srcs = [
        "addition_server.go",
        "main.go",
    ],
    importpath = "angular_bazel_GRPC/addition_service/server",
    visibility = ["//visibility:private"],
    deps = [
        "//addition_service:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
