java_binary(
    name = "server",
    srcs = [
        "Main.java",
        "MultiplicationServiceImpl.java",
    ],
    main_class = "angular_bazel_grpc.multiplication_server.Main",
    deps = [
        "//addition_service:addition_service_java_grpc",
        "//addition_service:addition_service_java_proto",
        "//multiplication_service:multiplication_service_java_grpc",
        "//multiplication_service:multiplication_service_java_proto",
        "@io_grpc_grpc_java//core",
        "@io_grpc_grpc_java//netty",
        "@io_grpc_grpc_java//stub",
    ],
)
